--- a/pages/components.html
+++ b/pages/components.html
@@ -6,12 +6,13 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Due date °°° Single Select - collapsed</div>
+    <div class="field__label">Due date ܐ Single Select - collapsed</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--collapsed pmx-selector--singleSelect pmx-selector--required ">
+      <div class="pmx-selector pmx-selector--collapsed">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style=""></span> 11/17/2017
+            <span class="pmx-selector__icon"></span>
+            <span class="pmx-selector__title">11/17/2017</span>
           </div>
         </div>
       </div>
@@ -21,12 +22,13 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Status °°° Single Select - collapsed</div>
+    <div class="field__label">Status ܐ Single Select - collapsed</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--collapsed pmx-selector--singleSelect pmx-selector--required MULTISELECT__POPUP" data-popid="#multiSelector-1">
+      <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP" data-popid="#multiSelector-1">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span> Not started
+            <span class="pmx-selector__icon" style="color: green;">܌</span>
+            <span class="pmx-selector__title">Not started</span>
           </div>
         </div>
       </div>
@@ -36,22 +38,25 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Teams °°° Multi Select - collapsed</div>
+    <div class="field__label">Teams ܐ Multi Select - collapsed</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect pmx-selector--required MULTISELECT__POPUP" data-popid="#multiSelector-3">
+      <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span> Squad X
+            <span class="pmx-selector__icon" style="color: green;">܌</span>
+            <span class="pmx-selector__title">Squad X</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: blue;">܌</span> Squad Y
+            <span class="pmx-selector__icon" style="color: blue;">܌</span>
+            <span class="pmx-selector__title">Squad Y</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: orange;">܌</span> Squad Z
+            <span class="pmx-selector__icon" style="color: orange;">܌</span>
+            <span class="pmx-selector__title">Squad Z</span>
           </div>
         </div>
       </div>
@@ -61,17 +66,17 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Billable °°° Single Select - expanded</div>
+    <div class="field__label">Billable ܐ Single Select - expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required ">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style="">܌</span>
+            <span class="pmx-selector__icon">܌</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label">
-            <span class="pmx-selector__icon " style="color: red;">ܐ</span>
+            <span class="pmx-selector__icon" style="color: red;">ܐ</span>
           </div>
         </div>
       </div>
@@ -81,22 +86,25 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Status °°° Single Select - expanded</div>
+    <div class="field__label">Status ܐ Single Select - expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required ">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style=""></span> Not started
+            <span class="pmx-selector__icon"></span>
+            <span class="pmx-selector__title">Not started</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style=""></span> Ongoing
+            <span class="pmx-selector__icon"></span>
+            <span class="pmx-selector__title">Ongoing</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style="color: red;"></span> Done
+            <span class="pmx-selector__icon" style="color: red;"></span>
+            <span class="pmx-selector__title">Done</span>
           </div>
         </div>
       </div>
@@ -106,22 +114,25 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Tags °°° Multi Select - expanded</div>
+    <div class="field__label">Tags ܐ Multi Select - expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect pmx-selector--required ">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span> dev-team
+            <span class="pmx-selector__icon" style="color: green;">܌</span>
+            <span class="pmx-selector__title">dev-team</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span> back-end
+            <span class="pmx-selector__icon" style="color: green;">܌</span>
+            <span class="pmx-selector__title">back-end</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span> critical
+            <span class="pmx-selector__icon" style="color: green;">܌</span>
+            <span class="pmx-selector__title">critical</span>
           </div>
         </div>
       </div>
@@ -131,27 +142,31 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Teams °°° Multi Select - expanded</div>
+    <div class="field__label">Teams ܐ Multi Select - expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect pmx-selector--required ">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;"></span>Squad A
+            <span class="pmx-selector__icon" style="color: green;"></span>
+            <span class="pmx-selector__title">Squad A</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;"></span>Squad B
+            <span class="pmx-selector__icon" style="color: green;"></span>
+            <span class="pmx-selector__title">Squad B</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;"></span>Squad C
+            <span class="pmx-selector__icon" style="color: green;"></span>
+            <span class="pmx-selector__title">Squad C</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;"></span>Squad X
+            <span class="pmx-selector__icon" style="color: green;"></span>
+            <span class="pmx-selector__title">Squad X</span>
           </div>
         </div>
       </div>
@@ -164,14 +179,14 @@ permalink: /components
     <div class="field__label">Unselectable Single Select - expanded</div>
     <div class="field__value">
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--changeIcons">
-        <div class="pmx-selector__value" style="width:32px;">
+        <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"  style="width:8px;">-</span>
+            <span class="pmx-selector__icon">-</span>
           </div>
         </div>
-        <div class="pmx-selector__value pmx-selector__value--selected" style="width:32px;">
+        <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label">
-            <span class="pmx-selector__icon"  style="width:8px;">+</span>
+            <span class="pmx-selector__icon">+</span>
           </div>
         </div>
       </div>
@@ -181,17 +196,19 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Tablet view selector °°° Unselectable Single Select - expanded</div>
+    <div class="field__label">Tablet view selector ܐ Unselectable Single Select - expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect ">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style=""></span> &#2343;
+            <span class="pmx-selector__icon"></span>
+            <span class="pmx-selector__title">ध</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style=""></span> &#2342;
+            <span class="pmx-selector__icon"></span>
+            <span class="pmx-selector__title">द</span>
           </div>
         </div>
       </div>
@@ -201,23 +218,26 @@ permalink: /components
 
 <div class="field-container">
   <div class="field">
-    <div class="field__label">Mobile view selector °°° Single Select - Expanded</div>
+    <div class="field__label">Mobile view selector ܐ Single Select - Expanded</div>
     <div class="field__value">
-      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--required ">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style=""></span> &#2343;
+            <span class="pmx-selector__icon"></span>
+            <span class="pmx-selector__title">ध</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon "></span> &#2330;
+            <span class="pmx-selector__icon"></span>
+            <span class="pmx-selector__title">च</span>
           </div>
         </div>
 
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon " style=""></span><span>द</span>
+            <span class="pmx-selector__icon"></span>
+            <span class="pmx-selector__title">द</span>
           </div>
         </div>
       </div>
@@ -225,8 +245,7 @@ permalink: /components
   </div>
 </div>
 
-
-
+{% include popups/multiSelector3.html %}
 
 <!-- ALL FOR JQUERY -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -234,3 +253,4 @@ permalink: /components
 
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
