--- a/pages/itembox.html
+++ b/pages/itembox.html
@@ -513,8 +513,13 @@ permalink: /itembox
 
 <!-- ALL FOR JQUERY -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/jquery-ui.min.js"></script>
 <!-- END -->
 
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
+
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
