--- a/pages/itembox.html
+++ b/pages/itembox.html
@@ -522,4 +522,5 @@ permalink: /itembox
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
 
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
