--- a/pages/components.html
+++ b/pages/components.html
@@ -245,6 +245,7 @@ permalink: /components
   </div>
 </div>
 
+{% include popups/multiSelector1.html %}
 {% include popups/multiSelector3.html %}
 
 <!-- ALL FOR JQUERY -->
