--- a/pages/components.html
+++ b/pages/components.html
@@ -12,7 +12,7 @@ permalink: /components
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__title">11/17/2017</span>
+            <span class="pmx-selector__field">11/17/2017</span>
           </div>
         </div>
       </div>
@@ -28,7 +28,7 @@ permalink: /components
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__title">Not started</span>
+            <span class="pmx-selector__field">Not started</span>
           </div>
         </div>
       </div>
@@ -44,19 +44,19 @@ permalink: /components
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__title">Squad X</span>
+            <span class="pmx-selector__field">Squad X</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: blue;">܌</span>
-            <span class="pmx-selector__title">Squad Y</span>
+            <span class="pmx-selector__field">Squad Y</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: orange;">܌</span>
-            <span class="pmx-selector__title">Squad Z</span>
+            <span class="pmx-selector__field">Squad Z</span>
           </div>
         </div>
       </div>
@@ -92,19 +92,19 @@ permalink: /components
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__title">Not started</span>
+            <span class="pmx-selector__field">Not started</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__title">Ongoing</span>
+            <span class="pmx-selector__field">Ongoing</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: red;"></span>
-            <span class="pmx-selector__title">Done</span>
+            <span class="pmx-selector__field">Done</span>
           </div>
         </div>
       </div>
@@ -120,19 +120,19 @@ permalink: /components
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__title">dev-team</span>
+            <span class="pmx-selector__field">dev-team</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__title">back-end</span>
+            <span class="pmx-selector__field">back-end</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__title">critical</span>
+            <span class="pmx-selector__field">critical</span>
           </div>
         </div>
       </div>
@@ -148,25 +148,25 @@ permalink: /components
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;"></span>
-            <span class="pmx-selector__title">Squad A</span>
+            <span class="pmx-selector__field">Squad A</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;"></span>
-            <span class="pmx-selector__title">Squad B</span>
+            <span class="pmx-selector__field">Squad B</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;"></span>
-            <span class="pmx-selector__title">Squad C</span>
+            <span class="pmx-selector__field">Squad C</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon" style="color: green;"></span>
-            <span class="pmx-selector__title">Squad X</span>
+            <span class="pmx-selector__field">Squad X</span>
           </div>
         </div>
       </div>
@@ -202,13 +202,13 @@ permalink: /components
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__title">ध</span>
+            <span class="pmx-selector__field">ध</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__title">द</span>
+            <span class="pmx-selector__field">द</span>
           </div>
         </div>
       </div>
@@ -224,26 +224,55 @@ permalink: /components
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__title">ध</span>
+            <span class="pmx-selector__field">ध</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__title">च</span>
+            <span class="pmx-selector__field">च</span>
           </div>
         </div>
 
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
             <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__title">द</span>
+            <span class="pmx-selector__field">द</span>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<div class="field-container">
+  <div class="field">
+    <div class="field__label">Prefix ܐ Type ܐ Field</div>
+    <div class="field__value">
+      <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--changeIcons">
+        <div class="pmx-selector__value">
+          <div class="pmx-selector__label ">
+            <span class="pmx-selector__icon">-</span>
+            <span class="pmx-selector__type">Contain</span>
+            <span class="pmx-selector__field">Field</span>
+          </div>
+        </div>
+        <div class="pmx-selector__value pmx-selector__value--selected">
+          <div class="pmx-selector__label">
+            <span class="pmx-selector__icon">+</span>
+            <span class="pmx-selector__type">Contain</span>
+            <span class="pmx-selector__field">Field</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
 
 {% include popups/multiSelector1.html %}
 {% include popups/multiSelector3.html %}
