--- a/pages/components.html
+++ b/pages/components.html
@@ -11,8 +11,8 @@ permalink: /components
       <div class="pmx-selector pmx-selector--collapsed">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__field">11/17/2017</span>
+            <span class="pmx-selector__labelIcon"></span>
+            <span class="pmx-selector__labelField">11/17/2017</span>
           </div>
         </div>
       </div>
@@ -27,8 +27,8 @@ permalink: /components
       <div class="pmx-selector pmx-selector--collapsed MULTISELECT__POPUP" data-popid="#multiSelector-1">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__field">Not started</span>
+            <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+            <span class="pmx-selector__labelField">Not started</span>
           </div>
         </div>
       </div>
@@ -43,20 +43,20 @@ permalink: /components
       <div class="pmx-selector pmx-selector--collapsed pmx-selector--multiSelect MULTISELECT__POPUP" data-popid="#multiSelector-3">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__field">Squad X</span>
+            <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+            <span class="pmx-selector__labelField">Squad X</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: blue;">܌</span>
-            <span class="pmx-selector__field">Squad Y</span>
+            <span class="pmx-selector__labelIcon" style="color: blue;">܌</span>
+            <span class="pmx-selector__labelField">Squad Y</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: orange;">܌</span>
-            <span class="pmx-selector__field">Squad Z</span>
+            <span class="pmx-selector__labelIcon" style="color: orange;">܌</span>
+            <span class="pmx-selector__labelField">Squad Z</span>
           </div>
         </div>
       </div>
@@ -71,12 +71,12 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon">܌</span>
+            <span class="pmx-selector__labelIcon">܌</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label">
-            <span class="pmx-selector__icon" style="color: red;">ܐ</span>
+            <span class="pmx-selector__labelIcon" style="color: red;">ܐ</span>
           </div>
         </div>
       </div>
@@ -91,20 +91,20 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__field">Not started</span>
+            <span class="pmx-selector__labelIcon"></span>
+            <span class="pmx-selector__labelField">Not started</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__field">Ongoing</span>
+            <span class="pmx-selector__labelIcon"></span>
+            <span class="pmx-selector__labelField">Ongoing</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: red;"></span>
-            <span class="pmx-selector__field">Done</span>
+            <span class="pmx-selector__labelIcon" style="color: red;"></span>
+            <span class="pmx-selector__labelField">Done</span>
           </div>
         </div>
       </div>
@@ -119,20 +119,20 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__field">dev-team</span>
+            <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+            <span class="pmx-selector__labelField">dev-team</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__field">back-end</span>
+            <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+            <span class="pmx-selector__labelField">back-end</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;">܌</span>
-            <span class="pmx-selector__field">critical</span>
+            <span class="pmx-selector__labelIcon" style="color: green;">܌</span>
+            <span class="pmx-selector__labelField">critical</span>
           </div>
         </div>
       </div>
@@ -147,26 +147,26 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--multiSelect">
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;"></span>
-            <span class="pmx-selector__field">Squad A</span>
+            <span class="pmx-selector__labelIcon" style="color: green;"></span>
+            <span class="pmx-selector__labelField">Squad A</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;"></span>
-            <span class="pmx-selector__field">Squad B</span>
+            <span class="pmx-selector__labelIcon" style="color: green;"></span>
+            <span class="pmx-selector__labelField">Squad B</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;"></span>
-            <span class="pmx-selector__field">Squad C</span>
+            <span class="pmx-selector__labelIcon" style="color: green;"></span>
+            <span class="pmx-selector__labelField">Squad C</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon" style="color: green;"></span>
-            <span class="pmx-selector__field">Squad X</span>
+            <span class="pmx-selector__labelIcon" style="color: green;"></span>
+            <span class="pmx-selector__labelField">Squad X</span>
           </div>
         </div>
       </div>
@@ -181,12 +181,12 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--changeIcons">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon">-</span>
+            <span class="pmx-selector__labelIcon">-</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label">
-            <span class="pmx-selector__icon">+</span>
+            <span class="pmx-selector__labelIcon">+</span>
           </div>
         </div>
       </div>
@@ -201,14 +201,14 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__field">ध</span>
+            <span class="pmx-selector__labelIcon"></span>
+            <span class="pmx-selector__labelField">ध</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__field">द</span>
+            <span class="pmx-selector__labelIcon"></span>
+            <span class="pmx-selector__labelField">द</span>
           </div>
         </div>
       </div>
@@ -223,21 +223,21 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__field">ध</span>
+            <span class="pmx-selector__labelIcon"></span>
+            <span class="pmx-selector__labelField">ध</span>
           </div>
         </div>
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__field">च</span>
+            <span class="pmx-selector__labelIcon"></span>
+            <span class="pmx-selector__labelField">च</span>
           </div>
         </div>
 
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon"></span>
-            <span class="pmx-selector__field">द</span>
+            <span class="pmx-selector__labelIcon"></span>
+            <span class="pmx-selector__labelField">द</span>
           </div>
         </div>
       </div>
@@ -252,16 +252,16 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect pmx-selector--changeIcons">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__icon">-</span>
-            <span class="pmx-selector__type">Contain</span>
-            <span class="pmx-selector__field">Field</span>
+            <span class="pmx-selector__labelIcon">-</span>
+            <span class="pmx-selector__labelType">Contain</span>
+            <span class="pmx-selector__labelField">Field</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label">
-            <span class="pmx-selector__icon">+</span>
-            <span class="pmx-selector__type">Contain</span>
-            <span class="pmx-selector__field">Field</span>
+            <span class="pmx-selector__labelIcon">+</span>
+            <span class="pmx-selector__labelType">Contain</span>
+            <span class="pmx-selector__labelField">Field</span>
           </div>
         </div>
       </div>
@@ -269,7 +269,39 @@ permalink: /components
   </div>
 </div>
 
+<div class="field-container">
+  <div class="field">
+    <div class="field__value">
 
+      <div class="pmx-selector">
+        <div class="pmx-selector__value">
+          <div class="pmx-selector__label ">
+            <span class="pmx-selector__labelType">Assigned to •</span>
+            <span class="pmx-selector__labelField">Nick De Jaeger</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+<div class="field-container">
+  <div class="field">
+    <div class="field__value">
+
+      <div class="pmx-selector">
+        <div class="pmx-selector__value">
+          <div class="pmx-selector__label ">
+            <span class="pmx-selector__labelType">Title •</span>
+            <span class="pmx-selector__labelField">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 
 
 
