--- a/pages/components.html
+++ b/pages/components.html
@@ -173,7 +173,7 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect js_pmx-selector--changeIcons">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__labelIcon">-</span>
+            <span class="pmx-selector__labelIcon">−</span>
           </div>
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
@@ -239,7 +239,7 @@ permalink: /components
       <div class="pmx-selector pmx-selector--expanded pmx-selector--toggleSelect js_pmx-selector--changeIcons">
         <div class="pmx-selector__value">
           <div class="pmx-selector__label ">
-            <span class="pmx-selector__labelIcon">-</span>
+            <span class="pmx-selector__labelIcon">−</span>
             <span class="pmx-selector__labelType">Contain</span>
             <span class="pmx-selector__labelField">Field</span>
           </div>
