don't add classes in old pmx structures

--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -16,7 +16,7 @@ permalink: /pmx
   </div>
 
   <main class="app__container">
-    <header class="old-app-header app-header cf">
+    <header class="app-header cf">
       {% include blocks/app-header-no-breadcrumb.html %}
     </header>
 
