added basic colorSelector

--- a/pages/colorpicker.html
+++ b/pages/colorpicker.html
@@ -6,6 +6,7 @@ permalink: /colorpicker
 
 
 {% include popups/colorPickerPopup.html %}
+{% include popups/colorSelector.html %}
 
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
