--- a/pages/pmx.html
+++ b/pages/pmx.html
@@ -40,12 +40,11 @@ permalink: /pmx
 
 <!-- ALL FOR JQUERY -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
-<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
 <!-- END -->
 
-<!-- ALL FOR TABS -->
-<script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/tabs.js"></script>
+<!-- CDN FOR TABS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
+<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/2/velocity.ui.min.js"></script>
 <!-- END -->
 
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/app.js"></script>
@@ -58,6 +57,7 @@ permalink: /pmx
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/toggle-panels.js"></script>
 
 <!-- COMPONENTS -->
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/tabs.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/semsearch.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/breadcrumbs.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
