first version of simple color picker

--- a/pages/colorpicker.html
+++ b/pages/colorpicker.html
@@ -11,6 +11,7 @@ permalink: /colorpicker
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/toggle.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/scripts/components/colorselector.js"></script>
 
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/init-expand-collapse.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/plugin/expand-collapse.js"></script>
