renamed colorselector files

--- a/pages/colorpicker.html
+++ b/pages/colorpicker.html
@@ -5,8 +5,10 @@ permalink: /colorpicker
 ---
 
 
-{% include popups/colorPickerPopup.html %}
-{% include popups/colorSelector.html %}
+{% include popups/colorPicker-popup.html %}
+{% include popups/colorSelector-popup.html %}
+
+{% include popups/colorPicker-children.html %}
 
 <!-- COMPONENTS -->
 <script type="text/javascript" src="{{ site.baseurl }}/scripts/components/newMultiselect.js"></script>
