--- a/pages/components.html
+++ b/pages/components.html
@@ -178,7 +178,7 @@ permalink: /components
         </div>
         <div class="pmx-selector__value pmx-selector__value--selected">
           <div class="pmx-selector__label">
-            <span class="pmx-selector__labelIcon">+</span>
+            <span class="pmx-selector__labelIcon">ބ</span>
           </div>
         </div>
       </div>
